# NetUpdataDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/angle/netupdatademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/angle/netupdatademo/: MainActivity.java
app/src/main/java/com/angle/netupdatademo/utils/: UriparseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/angle/netupdatademo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
